<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    >

    <com.rifcode.chatiw.Utils.VarelaRoundRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_dialog_title"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorVertbyrry"
        android:gravity="center"
        />


    <com.rifcode.chatiw.Utils.VarelaRoundRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_dialog_message"
        android:textSize="16sp"
        android:textColor="@color/colorVertbyrry"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_dialog_ok"
        android:layout_weight="1"
        android:textColor="@color/colorBlackOne"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/btnRateNow"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_dialog_no"
        android:layout_weight="1"
        android:textColor="@color/colorBlackOne"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/btnNoThanks"
        />

    </LinearLayout>


</LinearLayout>