<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lovewallper"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_weight="1"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txInputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/hintAnimationSignIN"
                >

                <EditText
                    android:id="@+id/edtUsernameSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    />

            </com.google.android.material.textfield.TextInputLayout>





                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txInputAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint=" "
                    app:passwordToggleEnabled="true"
                    android:theme="@style/hintAnimationSignIN"
                    >

                    <EditText
                        android:id="@+id/edtAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:maxLength="2"
                        android:hint="@string/age"
                        android:textColorHint="@color/colorWhite"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/country"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/spCountry"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/sex"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        >


                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/if_woman"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:tag="Femal"
                            android:background="@color/colorBaraRed"
                            />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/if_man"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:id="@+id/rMen"
                            android:background="@color/colorBaraRed"
                            />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            >


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbPolicy"
                android:text="@string/policy_accept"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:padding="8dp"
                android:textStyle="bold"
                android:theme="@style/WhiteCheck"
                android:buttonTint="@color/colorWhite"
                />

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/tvlaws"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:text="@string/laws_tv"
                android:background="@color/colorRed"
                android:padding="5dp"
                />

        </LinearLayout>

            <Button
                android:id="@+id/btnCreateAcount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="36dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:background="@color/colorBaraRed"
               />



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <ProgressBar
                    android:id="@+id/pbRegister"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/AppTheme.WhiteAccent1"
                    android:visibility="invisible"
                    android:layout_marginBottom="10dp"
                    />


            </RelativeLayout>
    </LinearLayout>
    </ScrollView>



</LinearLayout>
